--- a/source/SimpleRedirects.Site/umbraco/config/lang/en.xml
+++ b/source/SimpleRedirects.Site/umbraco/config/lang/en.xml
@@ -362,6 +362,7 @@
   <area alias="mediaType">
      <key alias="copyFailed">Failed to copy media type</key>
      <key alias="moveFailed">Failed to move media type</key>
+     <key alias="autoPickMediaType">Auto pick</key>
   </area>
   <area alias="memberType">
      <key alias="copyFailed">Failed to copy member type</key>
@@ -1216,25 +1217,19 @@ To manage your website, simply open the Umbraco backoffice and start adding cont
     <key alias="deletewarning">This will delete the package</key>
     <key alias="dropHere">Drop to upload</key>
     <key alias="includeAllChildNodes">Include all child nodes</key>
-    <key alias="orClickHereToUpload">or click here to choose package file</key>
-    <key alias="uploadPackage">Upload package</key>
-    <key alias="localPackageDescription">Install a local package by selecting it from your machine. Only install packages from sources you know and trust</key>
-    <key alias="uploadAnother">Upload another package</key>
-    <key alias="cancelAndUploadAnother">Cancel and upload another package</key>
-    <key alias="accept">I accept</key>
+   <key alias="accept">I accept</key>
     <key alias="termsOfUse">terms of use</key>
 
     <key alias="pathToFile">Path to file</key>
     <key alias="pathToFileDescription">Absolute path to file (ie: /bin/umbraco.bin)</key>
     <key alias="installed">Installed</key>
     <key alias="installedPackages">Installed packages</key>
-    <key alias="installLocal">Install local</key>
     <key alias="installFinish">Finish</key>
+    <key alias="installInstructions">Install instructions</key>
     <key alias="noConfigurationView">This package has no configuration view</key>
     <key alias="noPackagesCreated">No packages have been created yet</key>
     <key alias="noPackages">You don’t have any packages installed</key>
     <key alias="noPackagesDescription"><![CDATA[You don’t have any packages installed. Either install a local package by selecting it from your machine, or browse through available packages using the <strong>'Packages'</strong> icon in the top right of your screen]]></key>
-    <key alias="packageActions">Package Actions</key>
     <key alias="packageAuthorUrl">Author URL</key>
     <key alias="packageContent">Package Content</key>
     <key alias="packageFiles">Package Files</key>
@@ -1270,6 +1265,7 @@ To manage your website, simply open the Umbraco backoffice and start adding cont
     <key alias="packageNoItemsText"><![CDATA[This package file doesn't contain any items to uninstall.<br/><br/>
       You can safely remove this from the system by clicking "uninstall package" below.]]></key>
     <key alias="packageOptions">Package options</key>
+    <key alias="packageMigrationsRun">Run pending package migrations</key>
     <key alias="packageReadme">Package readme</key>
     <key alias="packageRepository">Package repository</key>
     <key alias="packageUninstallConfirm">Confirm package uninstall</key>
@@ -1282,14 +1278,8 @@ To manage your website, simply open the Umbraco backoffice and start adding cont
     <key alias="packageVersion">Package version</key>
     <key alias="packageAlreadyInstalled">Package already installed</key>
     <key alias="targetVersionMismatch">This package cannot be installed, it requires a minimum Umbraco version of</key>
-    <key alias="installStateUninstalling">Uninstalling...</key>
-    <key alias="installStateDownloading">Downloading...</key>
-    <key alias="installStateImporting">Importing...</key>
-    <key alias="installStateInstalling">Installing...</key>
-    <key alias="installStateRestarting">Restarting, please wait...</key>
-    <key alias="installStateComplete">All done, your browser will now refresh, please wait...</key>
-    <key alias="installStateCompleted">Please click 'Finish' to complete installation and reload the page.</key>
-    <key alias="installStateUploading">Uploading package...</key>
+    <key alias="verifiedToWorkOnUmbracoCloud">Verified to work on Umbraco Cloud</key>
+
   </area>
   <area alias="paste">
     <key alias="doNothing">Paste with full formatting (Not recommended)</key>
@@ -1356,6 +1346,17 @@ To manage your website, simply open the Umbraco backoffice and start adding cont
     <key alias="pickedTrashedItem">You have picked a media item currently deleted or in the recycle bin</key>
     <key alias="pickedTrashedItems">You have picked media items currently deleted or in the recycle bin</key>
     <key alias="trashed">Trashed</key>
+    <key alias="openMedia">Open in Media Library</key>
+    <key alias="changeMedia">Change Media Item</key>
+    <key alias="resetMediaCrop">Reset media crop</key>
+    <key alias="editMediaEntryLabel">Edit %0% on %1%</key>
+    <key alias="confirmCancelMediaEntryCreationHeadline">Discard creation?</key>
+    <key alias="confirmCancelMediaEntryCreationMessage"><![CDATA[Are you sure you want to cancel the creation.]]></key>
+    <key alias="confirmCancelMediaEntryHasChanges">You have made changes to this content. Are you sure you want to discard them?</key>
+    <key alias="confirmRemoveMediaEntryMessage">Remove?</key>
+    <key alias="confirmRemoveAllMediaEntryMessage">Remove all medias?</key>
+    <key alias="tabClipboard">Clipboard</key>
+    <key alias="notAllowed">Not allowed</key>
   </area>
   <area alias="relatedlinks">
     <key alias="enterExternal">enter external link</key>
@@ -1573,9 +1574,9 @@ To manage your website, simply open the Umbraco backoffice and start adding cont
       ]]></key>
     <key alias="sectionName">Section Name</key>
     <key alias="sectionMandatory">Section is mandatory</key>
-    <key alias="sectionMandatoryDesc">
+    <key alias="sectionMandatoryDesc"><![CDATA[
             If mandatory, the child template must contain a <code>@section</code> definition, otherwise an error is shown.
-        </key>
+    ]]></key>
     <key alias="queryBuilder">Query builder</key>
     <key alias="itemsReturned">items returned, in</key>
     <key alias="copyToClipboard">copy to clipboard</key>
@@ -1622,6 +1623,7 @@ To manage your website, simply open the Umbraco backoffice and start adding cont
     <key alias="contentAllowed">This content is allowed here</key>
     <key alias="clickToEmbed">Click to embed</key>
     <key alias="clickToInsertImage">Click to insert image</key>
+    <key alias="clickToInsertMacro">Click to insert macro</key>
     <key alias="placeholderImageCaption">Image caption...</key>
     <key alias="placeholderWriteHere">Write here...</key>
     <key alias="gridLayouts">Grid Layouts</key>
@@ -2128,6 +2130,7 @@ To manage your website, simply open the Umbraco backoffice and start adding cont
     <key alias="trySkipIisCustomErrorsCheckErrorMessage">Try Skip IIS Custom Errors is currently '%0%'. It is recommended to set this to '%1%' for your IIS version (%2%).</key>
     <key alias="trySkipIisCustomErrorsCheckRectifySuccessMessage">Try Skip IIS Custom Errors successfully set to '%0%'.</key>
     <!-- The following keys get predefined tokens passed in that are not all the same, like above -->
+    <key alias="configurationServiceFileNotFound">File does not exist: '%0%'.</key>
     <key alias="configurationServiceNodeNotFound"><![CDATA[Unable to find <strong>'%0%'</strong> in config file <strong>'%1%'</strong>.]]></key>
     <key alias="configurationServiceError">There was an error, check log for full error: %0%.</key>
     <key alias="databaseSchemaValidationCheckDatabaseOk">Database - The database schema is correct for this version of Umbraco</key>
@@ -2383,6 +2386,7 @@ To manage your website, simply open the Umbraco backoffice and start adding cont
   <area alias="clipboard">
     <key alias="labelForCopyAllEntries">Copy %0%</key>
     <key alias="labelForArrayOfItemsFrom">%0% from %1%</key>
+    <key alias="labelForArrayOfItems">Collection of %0%</key>
     <key alias="labelForRemoveAllEntries">Remove all items</key>
     <key alias="labelForClearClipboard">Clear clipboard</key>
   </area>
