--- a/source/SimpleRedirects.Site/umbraco/config/lang/es.xml
+++ b/source/SimpleRedirects.Site/umbraco/config/lang/es.xml
@@ -815,14 +815,9 @@
   </area>
   <area alias="packager">
     <key alias="chooseLocalPackageText"><![CDATA[Elige un paquete de tu máquina, seleccionando el botón Examinar<br />y localizando el paquete. Los paquetes de Umbraco normalmente tienen la extensión ".umb" o ".zip".]]></key>
-        <key alias="dropHere">Suelta para subir archivo</key>
-        <key alias="orClickHereToUpload">o Pulsa aquí para elegir paquete</key>
-    <key alias="uploadPackage">Subir paquete</key>
-        <key alias="localPackageDescription">Instala un paquete local seleccionándolo desde tu ordenador. instala sólo paquetes de fuentes que conoces y en las que confías</key>
-    <key alias="uploadAnother">Subir otro paquete</key>
-    <key alias="cancelAndUploadAnother">Cancelar y subir otro paquete</key>
+    <key alias="dropHere">Suelta para subir archivo</key>
     <key alias="packageLicense">Licencia</key>
-        <key alias="accept">Aceptar</key>
+    <key alias="accept">Aceptar</key>
     <key alias="termsOfUse">términos de uso</key>
     <key alias="packageInstall">Instalar paquete</key>
     <key alias="installFinish">Terminar</key>
@@ -865,14 +860,6 @@
     <key alias="packageVersion">Versión del paquete</key>
     <key alias="packageAlreadyInstalled">Paquete ya instalado</key>
     <key alias="targetVersionMismatch">Este paquete no se puede instalar, requiere un versión mínima de Umbraco de </key>
-    <key alias="installStateUninstalling">Desinstalando...</key>
-    <key alias="installStateDownloading">Descargando...</key>
-    <key alias="installStateImporting">Importando...</key>
-    <key alias="installStateInstalling">Instalando...</key>
-    <key alias="installStateRestarting">Reiniciando, por favor espera...</key>
-    <key alias="installStateComplete">Todo hecho, tu navegador se actualizará, por favor espera...</key>
-    <key alias="installStateCompleted">Por favor pulsa 'Terminar' para completar la instalación y actualizar la página.</key>
-    <key alias="installStateUploading">Subiendo paquete...</key>
   </area>
   <area alias="paste">
     <key alias="doNothing">Pegar con formato completo (No recomendado)</key>
@@ -1113,9 +1100,9 @@
       ]]></key>
     <key alias="sectionName">Nombre de sección</key>
     <key alias="sectionMandatory">Sección es obligatoria</key>
-    <key alias="sectionMandatoryDesc">
+    <key alias="sectionMandatoryDesc"><![CDATA[
             Si está marcada como obligatoria, la plantilla hija debe contener una definición de <code>@section</code> o se mostrará un error.
-        </key>
+    ]]></key>
     <key alias="queryBuilder">Constructor de consultas</key>
     <key alias="itemsReturned">elementos devueltos, en</key>
     <key alias="iWant">Quiero</key>
@@ -1567,6 +1554,8 @@
     <key alias="trySkipIisCustomErrorsCheckErrorMessage">Intentar saltar Errores Personalizados de IIS está '%0%'. Se recomienda configurarlo como '%1%' para tu versión (%2%) de IIS.</key>
     <key alias="trySkipIisCustomErrorsCheckRectifySuccessMessage">Intentar saltar Errores Personalizados de IIS se configuró como con '%0%' éxito.</key>
     <!-- The following keys get predefined tokens passed in that are not all the same, like above -->
+    <key alias="configurationServiceFileNotFound">Archivo no existe: '%0%'.</key>
+    <key alias="configurationServiceNodeNotFound"><![CDATA[No se puedo encontrar <strong>'%0%'</strong> en archivo de configuración <strong>'%1%'</strong>.]]></key>
     <key alias="configurationServiceError">Hubo un error, revisa los logs para ver el error completo: %0%.</key>
     <key alias="httpsCheckValidCertificate">El certificado de tu sitio es válido.</key>
     <key alias="httpsCheckInvalidCertificate">Error validando certificado: '%0%'</key>
